--- a/templates/js-assessment.html
+++ b/templates/js-assessment.html
@@ -39,6 +39,12 @@
 <script>
   "use strict";
   // code here for above-problem
+
+  var hiByeBtn = document.getElementById('change-hello-to-goodbye-button');
+
+  hiByeBtn.addEventListener('click', function () {
+    document.getElementById('message-to-change').innerHTML = 'goodbye';
+    });
 </script>
 
 <div class="hint">
@@ -67,6 +73,15 @@
 <script>
   "use strict";
   // code here for above problem
+  var preventBtn = document.getElementById('prevent-form-submission-button');
+
+  function showAlert(evt) {
+    evt.preventDefault();
+
+    alert('Just an Alert!');
+  }
+
+  preventBtn.addEventListener('click', showAlert);
 </script>
 
 <div class="hint">
