One problem left to complete in practice

--- a/templates/js-practice.html
+++ b/templates/js-practice.html
@@ -312,9 +312,11 @@
 
   function processPuppies(evt) {
     evt.preventDefault();
-    console.log(evt.data);
+
     // set #num-puppies 
-    $.get('/puppies.json', {}, showPuppies);
+    var formInputs = $("#num-puppies").serialize();
+
+    $.get('/puppies.json', formInputs, showPuppies);
     console.log('requested info to show puppies');
   }
 
